# opencv

./: CMakeLists.txt
cmake/: OpenCVDetectPython.cmake  OpenCVModule.cmake
modules/python/: CMakeLists.txt  common.cmake
modules/world/: CMakeLists.txt
